@@ -1,17 +1,0 @@
-Source: antiprism
-Section: science
-Priority: extra
-Maintainer: Adrian Rossiter <adrian@antiprism.com>
-Build-Depends: debhelper-compat (= 10), freeglut3-dev (>= 2.6), libc6-dev (>= 2.13), libglu1-mesa-dev (>= 7.11), libx11-dev (>= 2), linux-libc-dev (>= 3), mesa-common-dev (>= 7.11), x11proto-core-dev (>= 7.0.22) 
-Standards-Version: 3.9.7
-Homepage: http://www.antiprism.com
-Vcs-Git: https://github.com/antiprism/antiprism.git
-Vcs-Browser: https://github.com/antiprism/antiprism
-
-Package: antiprism
-Architecture: any
-Depends: ${misc:Depends}, ${shlibs:Depends}
-Description: polyhedron modelling software
- Antiprism is a set of command line programs to create, transform,
- analyse and visualise polyhedra. It includes a GLUT-based viewer.
-
