@@ -1,297 +1,0 @@
-Format: http://www.debian.org/doc/packaging-manuals/copyright-format/1.0/
-Upstream-Name: antiprism
-Upstream-Contact: Adrian Rossiter <adrian@antiprism.com>
-Source: <http://www.antiprism.com>
-License: MIT-and-similar
-         permissive with attribution
-
-
-Files: *
-Comment: Bulk of the files, one author or the other, or both
-Copyright: 2003-2023, Adrian Rossiter <adrian@antiprism.com>
-           2006-2023, Roger Kaufman
-License: Expat
- Permission is hereby granted, free of charge, to any person obtaining a
- copy of this software and associated documentation files (the "Software"),
- to deal in the Software without restriction, including without limitation
- the rights to use, copy, modify, merge, publish, distribute, sublicense,
- and/or sell copies of the Software, and to permit persons to whom the
- Software is furnished to do so, subject to the following conditions:
- .
-   The above copyright notice and this permission notice shall be included
-   in all copies or substantial portions of the Software.
- .
- THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
- IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
- FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
- AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
- LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
- FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS
- IN THE SOFTWARE.
-
-
-Files: src/canonical* src/conway.cc
-Comment: Conway notation, Canonicalization
-Copyright: 2003-2023, Adrian Rossiter <adrian@antiprism.com>
-           2006-2023, Roger Kaufman
-License: Expat_plus
- Includes ideas and algorithms by George W. Hart, http://www.georgehart.com
- .
- Permission is hereby granted, free of charge, to any person obtaining a
- copy of this software and associated documentation files (the "Software"),
- to deal in the Software without restriction, including without limitation
- the rights to use, copy, modify, merge, publish, distribute, sublicense,
- and/or sell copies of the Software, and to permit persons to whom the
- Software is furnished to do so, subject to the following conditions:
- .
-   The above copyright notice and this permission notice shall be included
-   in all copies or substantial portions of the Software.
- .
- THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
- IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
- FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
- AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
- LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
- FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS
- IN THE SOFTWARE.
-
-
-Files: base/qhull/*
-Comment: Qhull - Convex Hulls, Delaunay, Voronoi
-Copyright: Qhull, Copyright (c) 1993-2003
-       The National Science and Technology Research Center for
-        Computation and Visualization of Geometric Structures
-                        (The Geometry Center)
-                       University of Minnesota
-                       email: qhull@qhull.org
-License: Qhull
- This software includes Qhull from The Geometry Center.  Qhull is 
- copyrighted as noted above.  Qhull is free software and may be obtained 
- via http from www.qhull.org.  It may be freely copied, modified, 
- and redistributed under the following conditions:
- .
- 1. All copyright notices must remain intact in all files.
- .
- 2. A copy of this text file must be distributed along with any copies 
-    of Qhull that you redistribute; this includes copies that you have 
-    modified, or copies of programs or other software products that 
-    include Qhull.
- .
- 3. If you modify Qhull, you must include a notice giving the
-    name of the person performing the modification, the date of
-    modification, and the reason for such modification.
- .
- 4. When distributing modified versions of Qhull, or other software 
-    products that include Qhull, you must provide notice that the original 
-    source code may be obtained as noted above.
- .
- 5. There is no warranty or other guarantee of fitness for Qhull, it is 
-    provided solely "as is".  Bug reports or fixes may be sent to 
-    qhull_bug@qhull.org; the authors may or may not act on them as 
-    they desire.
- .
-                      -------------------
- .
- Changes from Qhull 2015.2 source made by Adrian Rossiter in Oct 2016
- to incorporate Qhull library code into Antiprism:
- .
- Only libqhull_r source used. Minor changes made for a clean build as C++.
-
-
-Files: base/getopt.*
-Comment: Ultra-Getopt
-Copyright: 2007, Kevin Locke <kwl7@cornell.edu>
-License: Expat
- Permission is hereby granted, free of charge, to any person obtaining a copy
- of this software and associated documentation files (the "Software"), to
- deal in the Software without restriction, including without limitation the
- rights to use, copy, modify, merge, publish, distribute, sublicense, and/or
- sell copies of the Software, and to permit persons to whom the Software is
- furnished to do so, subject to the following conditions:
- .
- The above copyright notice and this permission notice shall be included in
- all copies or substantial portions of the Software.
- .
- THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
- IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
- FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
- AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
- LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
- FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS
- IN THE SOFTWARE.
-
-
-Files: base/random.h
-Comment: Random number generator
-Copyright: public domain
-License: public-domain
- Robin Whittle  rw@firstpr.com.au    2005 September 21 
- http://www.firstpr.com.au/dsp/rand31/rand31-park-miller-carta.cc.txt
-
-
-Files: base/tesselator/*
-Comment: GLUtesselator
-Copyright: 1991-2000 Silicon Graphics, Inc.
-License: SGI
- License Applicability. Except to the extent portions of this file are
- made subject to an alternative license as permitted in the SGI Free
- Software License B, Version 1.1 (the "License"), the contents of this
- file are subject only to the provisions of the License. You may not use
- this file except in compliance with the License. You may obtain a copy
- of the License at Silicon Graphics, Inc., attn: Legal Services, 1600
- Amphitheatre Parkway, Mountain View, CA 94043-1351, or at:
- .
- http://oss.sgi.com/projects/FreeB
- .
- Note that, as provided in the License, the Software is distributed on an
- "AS IS" basis, with ALL EXPRESS AND IMPLIED WARRANTIES AND CONDITIONS
- DISCLAIMED, INCLUDING, WITHOUT LIMITATION, ANY IMPLIED WARRANTIES AND
- CONDITIONS OF MERCHANTABILITY, SATISFACTORY QUALITY, FITNESS FOR A
- PARTICULAR PURPOSE, AND NON-INFRINGEMENT.
- .
- Original Code. The Original Code is: OpenGL Sample Implementation,
- Version 1.2.1, released January 26, 2000, developed by Silicon Graphics,
- Inc. The Original Code is Copyright (c) 1991-2000 Silicon Graphics, Inc.
- Copyright in any portions created by third parties is as indicated
- elsewhere herein. All Rights Reserved.
- .
- Additional Notice Provisions: The application programming interfaces
- established by SGI in conjunction with the Original Code are The
- OpenGL(R) Graphics System: A Specification (Version 1.2.1), released
- April 1, 1999; The OpenGL(R) Graphics System Utility Library (Version
- 1.3), released November 4, 1998; and OpenGL(R) Graphics with the X
- Window System(R) (Version 1.3), released October 19, 1998. This software
- was created using the OpenGL(R) version 1.2.1 Sample Implementation
- published by SGI, but has not been independently verified as being
- compliant with the OpenGL(R) version 1.2.1 Specification.
- 
-
-Files: base/prop_col.*
-Comment: Minimal proper colouring (two licences)
-Copyright: 1994 Michael Trick.
-           1996-2000 Darko Kirovski, Miodrag Podkonjak and the Regents of
-                        the University of California
-License: Expat_other
- The author of this software is Michael Trick.  Copyright (c) 1994 by 
- Michael Trick.
- .
- Permission to use, copy, modify, and distribute this software for any
- purpose without fee is hereby granted, provided that this entire notice
- is included in all copies of any software which is or includes a copy
- or modification of this software and in all copies of the supporting
- documentation for such software.
- THIS SOFTWARE IS BEING PROVIDED "AS IS", WITHOUT ANY EXPRESS OR IMPLIED
- WARRANTY.  IN PARTICULAR, NEITHER THE AUTHOR DOES NOT MAKE ANY
- REPRESENTATION OR WARRANTY OF ANY KIND CONCERNING THE MERCHANTABILITY
- OF THIS SOFTWARE OR ITS FITNESS FOR ANY PARTICULAR PURPOSE.
- .
-   COLOR.C: Easy code for graph coloring
-   Author: Michael A. Trick, Carnegie Mellon University, trick+@cmu.edu
-   Last Modified: November 2, 1994
-   http://mat.gsia.cmu.edu/COLOR/solvers/trick.c
- .
- ------------------------------------------------------------------------
- .
- Contact author(s) for original code: darko@cs.ucla.edu, miodrag@cs.ucla.edu
- Affiliationss: UCLA, Computer Science
- .
- Permission is hereby granted, free of charge, to any person obtaining 
- a copy of this software and associated documentation files (the "Software"),
- to deal in the Software without restriction, including without limitation 
- the rights to use, copy, modify, merge, publish, distribute, sublicense, 
- and/or sell copies of the Software, and to permit persons to whom the 
- Software is furnished to do so, subject to the following conditions:
- .
- The above copyright notice and this permission notice shall be included
- in all copies or substantial portions of the Software.
- .
- THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, 
- EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES
- OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. 
- IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, 
- DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR 
- OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR
- THE USE OR OTHER DEALINGS IN THE SOFTWARE.
-
-
-Files: base/muparser/*
-Comment: muParser - A fast math parser library
-Copyright: 2011 Ingo Berg
-           Web: muparser.beltoforion.de
-           e-mail: muparser@beltoforion.de
-License: Expat
- Permission is hereby granted, free of charge, to any person obtaining 
- a copy of this software and associated documentation files (the "Software"),
- to deal in the Software without restriction, including without limitation 
- the rights to use, copy, modify, merge, publish, distribute, sublicense, 
- and/or sell copies of the Software, and to permit persons to whom the 
- Software is furnished to do so, subject to the following conditions:
- .
- The above copyright notice and this permission notice shall be included
- in all copies or substantial portions of the Software.
- .
- THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, 
- EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES
- OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. 
- IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, 
- DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR 
- OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR
- THE USE OR OTHER DEALINGS IN THE SOFTWARE.
-
-
-Files: src_extra/kaleido.cc
-Comment: kaleido - kaleidoscopic construction of uniform polyhedra
-Copyright: 1991-2002 Dr. Zvi Har'El <rl@math.technion.ac.il>
-License: Kaleido
- Redistribution and use in source and binary forms, with or without
- modification, are permitted provided that the following conditions
- are met:
- .
- 1. Redistributions of source code must retain the above copyright
-    notice, this list of conditions and the following disclaimer.
- .
- 2. Redistributions in binary form must reproduce the above copyright
-    notice, this list of conditions and the following disclaimer in
-    the documentation and/or other materials provided with the
-    distribution.
- .
- 3. The end-user documentation included with the redistribution,
-    if any, must include the following acknowledgment:
-    "This product includes software developed by
-    Dr. Zvi Har'El (http://www.math.technion.ac.il/~rl/)."
-    Alternately, this acknowledgment may appear in the software itself,
-    if and wherever such third-party acknowledgments normally appear.
- .
- This software is provided 'as-is', without any express or implied
- warranty.  In no event will the author be held liable for any
- damages arising from the use of this software.
- .
- Author:
-         Dr. Zvi Har'El,
-         Deptartment of Mathematics,
-         Technion, Israel Institue of Technology,
-         Haifa 32000, Israel.
-         E-Mail: rl@math.technion.ac.il
-         
-         
-Files: src/tiny_obj_loader.h
-Comment: helper code to load an obj file to convert to an off file
-Copyright: 2012-Present, Syoyo Fujita and many contributors.
-License: Expat
- Permission is hereby granted, free of charge, to any person obtaining a copy
- of this software and associated documentation files (the "Software"), to
- deal in the Software without restriction, including without limitation the
- rights to use, copy, modify, merge, publish, distribute, sublicense, and/or
- sell copies of the Software, and to permit persons to whom the Software is
- furnished to do so, subject to the following conditions:
- .
- The above copyright notice and this permission notice shall be included in
- all copies or substantial portions of the Software.
- .
- THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
- IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
- FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
- AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
- LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
- FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS
- IN THE SOFTWARE.
