@@ -1,5 +1,0 @@
-[DEFAULT]
-upstream-branch=debian-upstream
-debian-branch=debian-debian
-
-postbuild = lintian -iIE --pedantic $GBP_CHANGES_FILE && echo "Lintian OK"""
