@@ -1,5 +1,0 @@
-antiprism (0.24.1) xenial; urgency=low
-
-  * See source repository commit log
-
- -- Adrian Rossiter <adrian@antiprism.com>  Sun, 1 May 2016 12:00:00 +0200
