@@ -5,6 +5,7 @@ xx-xx-24 Adrian Rossiter <adrian@antiprism.com>
          New Programs
          Changes
             obj2off: now uses companion .mtl file to transfer colors to off
+            build: remove debian packging directory
          Fixes
             symmetry: missing Cs subgroup for Oh and Cv
             off2obj: corrected obj file format
